[project]
name = "cycquery"
version = "0.1.8"
description = "A tool to query EHR databases"
readme = "README.md"
authors = [{name = "Vector AI Engineering", email = "cyclops@vectorinstitute.ai"}]
license = "Apache-2.0"
repository = "https://github.com/VectorInstitute/cycquery"
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>2.0.0,<2.2.0",
    "pyarrow>=17.0.0",
    "psycopg2>=2.9.6",
    "SQLAlchemy>=1.4.32,<2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.1.1",
    "pre-commit>=4.0.0",
    "pytest-cov>=3.0.0",
    "codecov>=2.1.13",
    "nbstripout>=0.6.1",
    "mypy>=1.0.0",
    "ruff>=0.9.0",
    "nbqa[toolchain]>=1.7.0",
    "pip-audit>=2.7.1"
]

docs = [
    "numpydoc>=1.2",
    "sphinx>=7.2.5",
    "sphinxcontrib-apidoc>=0.4.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
    "sphinx-design>=0.5.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autoapi>=2.0.0",
    "nbsphinx>=0.8.11",
    "ipython>=8.8.0",
    "ipykernel>=6.23.0",
    "furo>=2024.01.29"
]

[tool.mypy]
ignore_missing_imports = true
install_types = true
pretty = true
namespace_packages = true
explicit_package_bases = true
non_interactive = true
warn_unused_configs = true
allow_any_generics = false
allow_subclassing_any = false
allow_untyped_calls = false
allow_untyped_defs = false
allow_incomplete_defs = false
check_untyped_defs = true
allow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
extra_checks = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A", "B", "COM", "C4", "RET", "SIM",
    "ICN", "Q", "RSE", "D", "E", "F",
    "I", "W", "N", "ERA", "PL"
]
fixable = ["A", "B", "COM", "C4", "RET", "SIM", "ICN", "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL"]
ignore = [
    "B905", "E501", "D203", "D213",
    "PLR2004", "PLR0913", "COM812"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
markers = [
    "integration_test: marks tests as integration tests"
]

[tool.coverage]
[tool.coverage.run]
source = ["cycquery"]
omit = ["tests/*", "*__init__.py"]
